--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "lodash": "^4.17.15",
+    "lowdb": "^1.0.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon --ignore session/ app.js"
   },
   "repository": {
     "type": "git",
